--- a/style.css
+++ b/style.css
@@ -141,3 +141,9 @@ body {
   letter-spacing: 1px;
   font-size: 1.2rem;
 }
+
+.mail{
+  font-size:20px;
+  text-decoration: none;
+  font-weight: bold;
+}
